--- a/wordrunner/index.html
+++ b/wordrunner/index.html
@@ -48,6 +48,9 @@
     let targetWord = "";
     let nextWord = "";
     let score = 0;
+let scorePulseFrame = 0;
+const SCORE_PULSE_DURATION = 60;
+let scorePops = [];
     let gameOver = false;
 let gamePaused = false;
 let autoPlayMode = true;
@@ -357,7 +360,7 @@ canvas.addEventListener("touchend", (e) => {
 
     async function update() {
       if (gameOver) return;
-      if (gamePaused && !autoPlayMode) return;
+      if (gamePaused) return;
 
       const effectiveSpeed = isJumping ? currentSpeed * 1.75 : currentSpeed;
       bgY += effectiveSpeed * 0.5;
@@ -402,11 +405,9 @@ canvas.addEventListener("touchend", (e) => {
           obs.y < playerY + playerSize &&
           obs.x === lanes[playerLane]) {
           gameOver = true;
-          alert("Game Over! Score: " + score);
-          localStorage.setItem("lastSpeed", currentSpeed);
-          const speedSlider = document.getElementById("speedSlider");
-          const lastSpeed = parseFloat(speedSlider.value);
-          location.reload();
+          document.getElementById("gameOverOverlay").style.display = "flex";
+          document.getElementById("finalScore").textContent = score;
+          return;
           speedSlider.value = lastSpeed;
           document.getElementById("speedValue").textContent = lastSpeed;
         }
@@ -434,13 +435,26 @@ canvas.addEventListener("touchend", (e) => {
 
       drawTargetWord();
       ctx.fillStyle = "white";
-      ctx.font = "16px Garamond";
+      const baseFontSize = 16;
+      const pulseSize = scorePulseFrame > 0 ? baseFontSize + scorePulseFrame * 1.5 : baseFontSize;
+      ctx.font = `${pulseSize}px Garamond`;
       const scoreText = "Score: " + score;
       const textWidth = ctx.measureText(scoreText).width;
       ctx.fillText(scoreText, 10, 20);
+      if (scorePulseFrame > 0) scorePulseFrame--;
+      scorePops.forEach((pop, i) => {
+        ctx.globalAlpha = pop.alpha;
+        ctx.fillText(pop.text, pop.x, pop.y);
+        ctx.globalAlpha = 1;
+        pop.y -= 1;
+        pop.alpha -= 0.03;
+        if (pop.alpha <= 0) scorePops.splice(i, 1);
+      });
 
       if (collectedLetters.join("") === targetWord) {
+        scorePops.push({ x: 10, y: 30, text: "+1", alpha: 1, frame: 0 });
         score += 1;
+        scorePulseFrame = SCORE_PULSE_DURATION;
         collectedLetters = [];
         currentSpeed = Math.min(currentSpeed + BASE_SPEED * SPEED_INCREMENT, BASE_SPEED * MAX_SPEED_MULTIPLIER);
 
@@ -458,7 +472,16 @@ canvas.addEventListener("touchend", (e) => {
     }
 
     spawnTimer = setInterval(() => {
-      if (!gameOver) spawnObstacle();
+      if (!gameOver && !gamePaused && !autoPlayMode) {
+        spawnObstacle();
+
+        // Speed up spawn rate while jumping
+        if (isJumping) {
+          setTimeout(() => {
+            if (!gameOver && !gamePaused && !autoPlayMode) spawnObstacle();
+          }, spawnInterval / 2);
+        }
+      }
     }, spawnInterval);
 
     function gameLoop() {
@@ -522,7 +545,23 @@ canvas.addEventListener("touchend", (e) => {
   }
   return indices;
 }
+document.addEventListener("visibilitychange", () => {
+  if (document.hidden) {
+    gamePaused = true;
+  } else {
+    const settingsPanel = document.getElementById("settingsPanel");
+    const settingsOpen = settingsPanel && settingsPanel.style.display === "block";
+    if (!autoPlayMode && !settingsOpen) {
+      gamePaused = false;
+    }
+  }
+});
 </script>
+<div id="gameOverOverlay" style="display:none;position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);color:white;font-family:Garamond,serif;z-index:25;align-items:center;justify-content:center;flex-direction:column;text-align:center;">
+  <h2>Game Over</h2>
+  <p>Your final score: <span id="finalScore">0</span></p>
+  <button onclick="location.reload()" style="padding:10px 20px; font-size:18px; cursor:pointer;">Play Again</button>
+</div>
 <div id="instructionOverlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); color: white; font-family: Garamond, serif; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 20; text-align: center; padding: 20px;">
   <h2>How to Play</h2>
   <p>Swipe left or right to move.<br>Swipe up to jump over traps and collect the right letters.</p>
