--- a/wordrunner/index.html
+++ b/wordrunner/index.html
@@ -569,7 +569,7 @@ document.addEventListener("visibilitychange", () => {
 </div>
 <div id="instructionOverlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); color: white; font-family: Garamond, serif; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 20; text-align: center; padding: 20px;">
   <h2>How to Play</h2>
-  <p>Swipe left or right to move.<br>Swipe up to jump over traps and collect the right letters.</p>
+  <p>Swipe left or right to move.<br>Double tap anywhere to jump over traps and collect the right letters.</p>
   <p>Your goal is to spell the target word correctly by collecting the right carrots!</p>
   <button id="startGameBtn" style="margin-top: 20px; padding: 10px 20px; font-size: 18px; cursor: pointer;">Start</button>
 </div>
