--- a/bottle/index.html
+++ b/bottle/index.html
@@ -68,6 +68,33 @@
       margin-top: 10px;
     }
 
+    #instructionOverlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.85);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+      padding: 20px;
+    }
+
+    #instructionOverlay button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1em;
+      background-color: white;
+      color: black;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
     @media (max-width: 500px) {
       .bottle {
         width: 50px;
@@ -78,7 +105,14 @@
 </head>
 <body>
 
-<h2>🔄 Bottle Guessing Game</h2>
+<div id="instructionOverlay">
+  <h2>Bottle Guessing Game</h2>
+  <p>Tap two bottles to swap their positions.</p>
+  <p>Your goal is to match the hidden correct order within 8 tries!</p>
+  <button onclick="hideInstructions()">Start Game</button>
+</div>
+
+<h2>Bottle Guessing Game</h2>
 <p>Tap two bottles to swap. You have 8 tries to guess the order.</p>
 
 <label for="difficulty">Difficulty:</label>
@@ -92,7 +126,7 @@
 <p id="feedback"></p>
 <p id="tries">Tries: 0 / 8</p>
 <p class="end-message" id="endMessage"></p>
-<button id="retryButton" onclick="startGame()">🔁 Retry Game</button>
+<button id="retryButton" onclick="startGame()">Retry Game</button>
 
 <script>
   const allBottleImages = [
@@ -195,7 +229,10 @@
     }
   }
 
-  startGame();
+  function hideInstructions() {
+    document.getElementById("instructionOverlay").style.display = "none";
+    startGame();
+  }
 </script>
 
 </body>
