--- a/spellboundbunny/index.html
+++ b/spellboundbunny/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mini Subway Surfer</title>
+  <title>Spellbound Bunny</title>
   <style>
     body {
       margin: 0;
@@ -568,6 +568,7 @@ document.addEventListener("visibilitychange", () => {
   <button onclick="location.reload()" style="padding:10px 20px; font-size:18px; cursor:pointer;">Play Again</button>
 </div>
 <div id="instructionOverlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); color: white; font-family: Garamond, serif; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 20; text-align: center; padding: 20px;">
+  <h1 style=\"color: #fff1e6; font-size: 36px; margin-bottom: 20px;\">Spellbound <span style=\"color: #88b37f;\">Bunny</span></h1>
   <h2>How to Play</h2>
   <p>Swipe left or right to move.<br>Double tap anywhere to jump over traps and collect the right letters.</p>
   <p>Your goal is to spell the target word correctly by collecting the right carrots!</p>
