--- a/crazymeteor/index.html
+++ b/crazymeteor/index.html
@@ -15,6 +15,10 @@
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
+    let direction = { x: 0, y: 0 };
+    let startX = 0, startY = 0;
+    let active = false;
+
     function isMobilePortrait() {
       return /Mobi|Android/i.test(navigator.userAgent) && window.innerHeight > window.innerWidth;
     }
@@ -150,7 +154,16 @@
       }
     }
 
+    function updateHeroPosition() {
+      if (!active) return;
+      hero.x += direction.x * hero.speed / 10;
+      hero.y += direction.y * hero.speed / 10;
+      hero.x = Math.max(0, Math.min(canvas.width - hero.width, hero.x));
+      hero.y = Math.max(0, Math.min(canvas.height - hero.height, hero.y));
+    }
+
     function update() {
+      updateHeroPosition();
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       drawScore();
 
@@ -248,59 +261,61 @@
     });
 
     update();
-  </script>
-<div id="joystick" style="position: fixed; width: 100px; height: 100px; background: rgba(255,255,255,0.1); border-radius: 50%; touch-action: none; z-index: 10; display: none;"></div>
-<script>
-  const joystick = document.getElementById('joystick');
-if (/Mobi|Android/i.test(navigator.userAgent)) {
-  let direction = { x: 0, y: 0 };
-  let startX = 0, startY = 0;
-  let active = false;
 
-  function updateHeroPosition() {
-    if (!active) return;
-    hero.x += direction.x * hero.speed / 10;
-    hero.y += direction.y * hero.speed / 10;
-    hero.x = Math.max(0, Math.min(canvas.width - hero.width, hero.x));
-    hero.y = Math.max(0, Math.min(canvas.height - hero.height, hero.y));
-  }
+    const joystick = document.createElement('div');
+    joystick.id = 'joystick';
+    joystick.style.cssText = 'position:fixed;width:100px;height:100px;background:rgba(255,255,255,0.1);border-radius:50%;touch-action:none;z-index:10;display:none;';
+    document.body.appendChild(joystick);
 
-  canvas.addEventListener('touchstart', (e) => {
-    const touch = e.touches[0];
-    startX = touch.clientX;
-    startY = touch.clientY;
-    joystick.style.left = `${startX - 50}px`;
-    joystick.style.top = `${startY - 50}px`;
-    joystick.style.display = 'block';
-    active = true;
-  });
-
-  canvas.addEventListener('touchmove', (e) => {
-    const touch = e.touches[0];
-    const dx = touch.clientX - startX;
-    const dy = touch.clientY - startY;
-    const mag = Math.sqrt(dx * dx + dy * dy);
-    if (mag > 10) {
-      direction.x = dx / mag;
-      direction.y = dy / mag;
+    function setJoystickStart(x, y) {
+      startX = x;
+      startY = y;
+      joystick.style.left = `${startX - 50}px`;
+      joystick.style.top = `${startY - 50}px`;
+      joystick.style.display = 'block';
+      active = true;
     }
-  });
 
-  canvas.addEventListener('touchend', () => {
-    direction = { x: 0, y: 0 };
-    active = false;
-    joystick.style.display = 'none';
-  });
+    function processMovement(x, y) {
+      const dx = x - startX;
+      const dy = y - startY;
+      const mag = Math.sqrt(dx * dx + dy * dy);
+      if (mag > 10) {
+        direction.x = dx / mag;
+        direction.y = dy / mag;
+      }
+    }
 
-  const originalUpdate = update;
-  update = function customUpdate() {
-    updateHeroPosition();
-    originalUpdate();
-  };
-}
-      originalUpdate();
-    };
-  }
-</script>
+    canvas.addEventListener('touchstart', (e) => {
+      const point = e.touches[0];
+      setJoystickStart(point.clientX, point.clientY);
+    });
+
+    canvas.addEventListener('mousedown', (e) => {
+      setJoystickStart(e.clientX, e.clientY);
+    });
+
+    canvas.addEventListener('touchmove', (e) => {
+      const point = e.touches[0];
+      processMovement(point.clientX, point.clientY);
+    });
+
+    canvas.addEventListener('mousemove', (e) => {
+      if (!active) return;
+      processMovement(e.clientX, e.clientY);
+    });
+
+    canvas.addEventListener('touchend', () => {
+      direction = { x: 0, y: 0 };
+      active = false;
+      joystick.style.display = 'none';
+    });
+
+    window.addEventListener('mouseup', () => {
+      direction = { x: 0, y: 0 };
+      active = false;
+      joystick.style.display = 'none';
+    });
+  </script>
 </body>
 </html>
