--- a/crazymeteor/index.html
+++ b/crazymeteor/index.html
@@ -12,6 +12,165 @@
 <body>
   <canvas id="gameCanvas" width="800" height="400"></canvas>
   <script>
+// Generated playback sequence
+// Generated playback sequence
+
+// Generated playback sequence
+
+// Generated playback sequence
+
+const sequence = [
+  {
+    kick: [true,false,false,false,true,false,false,false,true,false,false,false,true,false,false,false],
+    snare: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false],
+    hat: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false]
+  },
+  {
+    kick: [true,false,false,false,true,false,false,false,true,false,false,false,true,false,false,false],
+    snare: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false],
+    hat: [true,false,true,false,true,false,true,false,true,false,true,false,true,false,true,false]
+  },
+  {
+    kick: [true,false,false,false,false,false,false,false,true,false,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [false,false,true,false,false,false,true,false,false,false,true,false,false,false,true,false]
+  },
+  {
+    kick: [true,false,false,false,false,false,false,false,true,false,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [false,false,true,false,false,false,true,false,false,false,true,false,false,false,true,false]
+  },
+  {
+    kick: [true,false,false,false,false,false,false,false,true,false,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [false,false,true,false,false,false,true,false,false,false,true,false,false,false,true,false]
+  },
+  {
+    kick: [true,false,false,false,false,false,false,false,true,false,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [false,false,true,false,false,false,true,false,false,false,true,false,false,false,true,false]
+  },
+  {
+    kick: [true,true,false,false,false,false,false,false,true,true,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [true,false,true,false,true,false,true,false,true,false,true,false,true,false,true,false]
+  },
+  {
+    kick: [true,true,false,false,false,false,false,false,true,true,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [true,false,true,false,true,false,true,false,true,false,true,false,true,false,true,false]
+  },
+  {
+    kick: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false],
+    snare: [true,false,true,false,true,true,true,false,true,false,true,false,true,true,true,true],
+    hat: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false]
+  },
+  {
+    kick: [true,false,false,false,true,false,false,false,true,false,false,false,true,false,false,false],
+    snare: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false],
+    hat: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false]
+  },
+  {
+    kick: [true,false,false,false,true,false,false,false,true,false,false,false,true,false,false,false],
+    snare: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false],
+    hat: [true,false,true,false,true,false,true,false,true,false,true,false,true,false,true,false]
+  },
+  {
+    kick: [true,false,false,false,false,false,false,false,true,false,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [false,false,true,false,false,false,true,false,false,false,true,false,false,false,true,false]
+  },
+  {
+    kick: [true,false,false,false,false,false,false,false,true,false,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [false,false,true,false,false,false,true,false,false,false,true,false,false,false,true,false]
+  },
+  {
+    kick: [true,true,false,false,false,false,false,false,true,true,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [true,false,true,false,true,false,true,false,true,false,true,false,true,false,true,false]
+  },
+  {
+    kick: [true,true,false,false,false,false,false,false,true,true,false,false,false,false,false,false],
+    snare: [false,false,false,false,true,false,false,false,false,false,false,false,true,false,false,false],
+    hat: [true,false,true,false,true,false,true,false,true,false,true,false,true,false,true,false]
+  },
+  {
+    kick: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false],
+    snare: [true,false,true,false,true,true,true,false,true,false,true,false,true,true,true,true],
+    hat: [false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false]
+  },
+];
+
+const tempo = 160;
+
+
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+let step = 0;
+let sequenceIndex = 0;
+
+function playKick() {
+  const osc = audioCtx.createOscillator();
+  const gain = audioCtx.createGain();
+  osc.type = 'sine';
+  osc.frequency.setValueAtTime(150, audioCtx.currentTime);
+  osc.frequency.exponentialRampToValueAtTime(50, audioCtx.currentTime + 0.1);
+  gain.gain.setValueAtTime(1, audioCtx.currentTime);
+  gain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.1);
+  osc.connect(gain).connect(audioCtx.destination);
+  osc.start();
+  osc.stop(audioCtx.currentTime + 0.1);
+}
+
+function playSnare() {
+  const buffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.2, audioCtx.sampleRate);
+  const data = buffer.getChannelData(0);
+  for (let i = 0; i < buffer.length; i++) data[i] = Math.random() * 2 - 1;
+  const src = audioCtx.createBufferSource();
+  src.buffer = buffer;
+  const filter = audioCtx.createBiquadFilter();
+  filter.type = 'highpass';
+  filter.frequency.setValueAtTime(1000, audioCtx.currentTime);
+  const gain = audioCtx.createGain();
+  gain.gain.setValueAtTime(0.5, audioCtx.currentTime);
+  gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.2);
+  src.connect(filter).connect(gain).connect(audioCtx.destination);
+  src.start();
+}
+
+function playHat() {
+  const buffer = audioCtx.createBuffer(1, audioCtx.sampleRate * 0.05, audioCtx.sampleRate);
+  const data = buffer.getChannelData(0);
+  for (let i = 0; i < buffer.length; i++) data[i] = Math.random() * 2 - 1;
+  const src = audioCtx.createBufferSource();
+  src.buffer = buffer;
+  const filter = audioCtx.createBiquadFilter();
+  filter.type = 'bandpass';
+  filter.frequency.setValueAtTime(8000, audioCtx.currentTime);
+  const gain = audioCtx.createGain();
+  gain.gain.setValueAtTime(0.3, audioCtx.currentTime);
+  gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.05);
+  src.connect(filter).connect(gain).connect(audioCtx.destination);
+  src.start();
+}
+
+function playStep(pattern) {
+  if (pattern.kick[step]) playKick();
+  if (pattern.snare[step]) playSnare();
+  if (pattern.hat[step]) playHat();
+}
+
+setInterval(() => {
+  playStep(sequence[sequenceIndex]);
+  step++;
+  if (step >= 16) {
+    step = 0;
+    sequenceIndex = (sequenceIndex + 1) % sequence.length;
+  }
+}, (60000 / tempo) / 2);
+
+
+    
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
@@ -291,8 +450,6 @@
       if (e.key === 'ArrowDown') hero.y = Math.min(canvas.height - hero.height, hero.y + hero.speed);
     });
 
-    update();
-
     const joystick = document.createElement('div');
     joystick.id = 'joystick';
     joystick.style.cssText = 'position:fixed;width:100px;height:100px;background:rgba(255,255,255,0.1);border-radius:50%;touch-action:none;z-index:10;display:none;';
@@ -347,6 +504,8 @@
       active = false;
       joystick.style.display = 'none';
     });
+
+        update();
   </script>
 </body>
 </html>
