--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <a class="game-link" href="https://jongchern.github.io/Games/spellboundbunny/" target="_blank">Spellbound Bunny</a>
     <a class="game-link" href="https://jongchern.github.io/Games/bottle/" target="_blank">Bottle Flip</a>
     <a class="game-link" href="https://jongchern.github.io/Games/crazymeteor/" target="_blank">Crazy Meteor</a>
+    <a class="game-link" href="https://jongchern.github.io/Games/8bit/" target="_blank">8 Bit JS Beat Generator</a>
   </div>
 </body>
 </html>
